modify：七层网络模型

--- a/_posts/HTTP相关/2021-04-19-01 HTTP发展史.md
+++ b/_posts/HTTP相关/2021-04-19-01 HTTP发展史.md
@@ -32,31 +32,45 @@ typora-root-url: ..
 
 2、没有返回头信息，只返回数据
 
-3、返回的内容以**ASCII字符**来传输
+3、返回的内容以 **ASCII字符** 来传输
 
 <img src="/../img/assets_2019/image-20210506174306712.png" alt="image-20210506174306712" style="zoom:80%;" />
 
 ## HTTP/1.0 - 并不是标准，只是一份使用文档
 1、增加了 **HEAD、POST** 等新方法；
+
 2、增加了**响应状态码**，标记可能的错误原因；
+
 3、引入了**协议版本号**概念；
+
 4、引入了 **HTTP Header**（头部）的概念，让 HTTP 处理请求和响应更加灵活；
+
 5、传输的数据**不再仅限于文本**
 
 ## HTTP/1.1 -  正式的标准
 主要变更点：
+
 1、增加了 **PUT、DELETE** 等新的方法；
-2、增加了**缓存**管理和控制；
-3、明确了连接管理，**允许持久连接**；
-4、允许**响应数据分块**（chunked），利于传输大文件；
+
+2、增加了 **<span style="color:red">缓存</span>** 管理和控制；
+
+3、明确了连接管理，**<span style="color:red">允许持久连接</span>**；
+
+4、允许 **<span style="color:red">响应数据分块</span>**（chunked），利于传输大文件；
+
 5、强制要求 **Host 头**，让互联网主机托管成为可能
 
-目前浏览器中对于同一个域名，默认允许同时建立 6 个 TCP 持久连接
+目前浏览器中对于同一个域名，默认允许同时建立 **6 个 TCP 持久连接**
 
 ## HTTP/2 - 还未普及
 在高度兼容 HTTP/1.1 的情况下，主要特点：
+
 1、**二进制协议**，不再是纯文本；
+
 2、**可发起多个请求**，废弃了 1.1 里的管道；
+
 3、使用专用算法**压缩头部**，减少数据传输量；
-4、允许**服务器主动**向客户端推送数据；
+
+4、允许 **<span style="color:red">服务器主动</span>** 向客户端推送数据；
+
 5、增强了**安全性**，“事实上”要求加密通信
