--- a/_posts/HTTP相关/2021-04-26-16-2 强制缓存和协商缓存.md
+++ b/_posts/HTTP相关/2021-04-26-16-2 强制缓存和协商缓存.md
@@ -20,14 +20,14 @@ typora-root-url: ..
 核心要点记录：
 
 - 缓存机制的关键
-    - 浏览器每次发起请求，都会先在**浏览器缓存**中查找该请求的结果以及缓存标识
-    - 浏览器每次拿到返回的请求结果都会将该**结果和缓存标识**存入浏览器缓存中
+    - 浏览器每次发起请求，都会先在 **浏览器缓存** 中查找该请求的结果以及缓存标识
+    - 浏览器每次拿到返回的请求结果都会将该 **结果和缓存标识** 存入浏览器缓存中
 
-#### 强制缓存
+#### 强制缓存 -> 浏览器缓存 `Cache-Control` > `Expires`
 
-- 定义：向浏览器缓存查找该请求结果，并根据该结果的缓存规则来决定是否使用该缓存结果的过程
+- 定义：向 **浏览器缓存** 查找该请求结果，并根据该结果的缓存规则来决定是否使用该缓存结果的过程
 
-- 响应头中控制强制缓存的字段：`Cache-Control` > `Expires`
+- **响应头** 中控制强制缓存的字段：`Cache-Control` > `Expires`
 
 - 三种情况：
 
@@ -43,21 +43,21 @@ typora-root-url: ..
 
         <img src="/../img/assets_2019/image-20210701172417407.png" alt="image-20210701172417407" style="zoom:47%;" />
 
-#### 协商缓存
+#### 协商缓存 -> 服务器请求 Etag/If-None-Match > Last-Modified/If-Modified-Since
 
-- 定义：强制缓存失效后，浏览器携带缓存标识向服务器发起请求，由服务器根据缓存标识决定是否使用缓存的过程
+- 定义：强制缓存失效后，浏览器携带缓存标识 **向服务器发起请求**，由服务器根据缓存标识决定是否使用缓存的过程
 
-- 响应头中协商缓存的标识：
+- **响应头** 中协商缓存的标识：
 
     `Etag / If-None-Match` > `Last-Modified / If-Modified-Since`（优先级）
 
 - 两种情况：
 
-    - 协商缓存生效，返回304
+    - 协商缓存生效，返回 `304 not modified` - 表示该资源暂无更新
 
         <img src="/../img/assets_2019/image-20210701175020077.png" alt="image-20210701175020077" style="zoom:57%;" />
 
-    - 协商缓存失效，返回200和请求结果结果
+    - 协商缓存失效，返回 `200 OK` 和请求结果结果
 
         <img src="/../img/assets_2019/image-20210701175117502.png" alt="image-20210701175117502" style="zoom:50%;" />
 
@@ -65,4 +65,4 @@ typora-root-url: ..
 
 强制缓存和协商缓存的时序流程图
 
-<img src="/../img/assets_2019/image-20210701180323319.png" alt="image-20210701180323319" style="zoom:80%;" />
+<img src="/../img/assets_2019/image-20210701180323319.png" alt="image-20210701180323319" style="zoom:55%;" />
