modify：新增webpack原理流程图

--- a/_posts/2020-05-22-webpack自学经验记录.md
+++ b/_posts/2020-05-22-webpack自学经验记录.md
@@ -20,7 +20,11 @@ typora-root-url: ..
 
     ![image-20210717223442851](/img/assets_2019/image-20210717223442851.png)
 
+webpack构建流程：
 
+参考文章[细说 webpack 之流程篇](https://developer.aliyun.com/article/61047)
+
+<img src="/../../../Downloads/TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244.png" alt="TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244" style="zoom:27%;" />
 
 webpack可以做什么？
 
