--- a/_posts/工程化/2020-05-22-webpack自学经验记录.md
+++ b/_posts/工程化/2020-05-22-webpack自学经验记录.md
@@ -148,3 +148,31 @@ typora-root-url: ..
 ##### 6、打开 `index.html`
 
 <img src="/../img/assets_2019/image-20200615151256435.png" alt="image-20200615151256435" style="zoom:50%;" />
+
+#### 写plugin
+
+官方文档给出的插件模版代码：
+
+- 其实就是在 `apply` 中传入一个 `Compiler` 实例， 然后基于该实例注册事件， `compilation` 同理， 最后 `webpack` 会在各流程执行 `call` 方法。
+
+```js
+class MyExampleWebpackPlugin {
+    // 定义 `apply` 方法
+    apply(compiler) {
+        // 指定要追加的事件钩子函数
+        compiler.hooks.compile.tapAsync(
+            'afterCompile',
+            (compilation, callback) => {
+                console.log('This is an example plugin!');
+                console.log('Here’s the `compilation` object which represents a single build of assets:', compilation);
+
+                // 使用 webpack 提供的 plugin API 操作构建结果
+                compilation.addModule(/* ... */);
+
+                callback();
+            }
+        );
+    }
+}
+```
+
