--- a/_posts/工程化/2020-05-22-webpack自学经验记录.md
+++ b/_posts/工程化/2020-05-22-webpack自学经验记录.md
@@ -28,22 +28,25 @@ typora-root-url: ..
 
 <img src="/../img/assets_2019/TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244.png" alt="TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244" style="zoom:30%;" />
 
-`webpack` 可以做什么？
+- `webpack` 可以做什么？
 
-1. `webpack` 能够 **处理 js 文件的相互依赖关系**
-2. `webpack` 能够处理 **js 的兼容问题**，把高级的、浏览器不识别的语法转为低级的、浏览器能正常识别的语法
+    - `webpack` 能够 **处理 js 文件的相互依赖关系**
+
+    - `webpack` 能够处理 **js 的兼容问题**，把高级的、浏览器不识别的语法转为低级的、浏览器能正常识别的语法
+
+        
 
 场景：面试的时候被反复问；做项目的时候对本地、线上理解不够；
 
 参考：慕课视频webpack4.0，书《深入学习webpack》；公司项目代码
 
-总结：
+- 总结：
 
 ​		这个 `webpack` 的学习，我大概是2月份开始的，一共花费了一个月左右看完视频，视频里面的课后作业是看 `webpack` 官网对应课程的内容，看完视频，官网差不多也看了一遍；3月份开始看书，大概也是花了一个月时间看完的，看书的时候，结合之前看视频的笔记，把书上提到的实战都自己一点一点做了一下；4月份的时候，搭建了 `webapck` 本地项目，写了 `loader`、`plugin`，实现启动指定页面。
 
 ​		接下来主要讲一下4月份做得事情，前面的视频和书的学习就不赘述了。
 
-#### 先讲webpack的本地搭建：
+## webpack的本地搭建
 
 ##### 1、新建3个文件
 
@@ -79,7 +82,7 @@ typora-root-url: ..
 
 <img src="/../img/assets_2019/image-20200522082817354.png" alt="image-20200522082817354" style="zoom:30%;" />
 
-#### 写loader
+## 写loader
 
 `loader` 主要是对源件进行一个翻译转化
 
@@ -95,61 +98,9 @@ typora-root-url: ..
 
 <img src="/../img/assets_2019/image-20200522093149421.png" alt="image-20200522093149421" style="zoom:30%;" />
 
-#### 写plugin
+## 写plugin
 
 `webpack` 运行的生命周期中会广播很多事件，`plugin` 可以监听这些时间，在合适的时机，通过 `Webpack` 提供的 `API` 改变输出结果。
-
-#### 实现启动某一个页面
-
-在项目中，不是每次用 `devserver` 起服务，都需要启动每一个页面的，一般都是启动指定路径的页面就可以了。这里写了一个方法，简单逻辑是：先获取代码输入的文件路径，生成一个正则表达式；遍历所有文件 `entry`，只要正则匹配不到的路径全部删除
-
--	第一步：获取到本项目的所有 `entries` 对象
-
-<img src="/../img/assets_2019/image-20200522134833544.png" alt="image-20200522134833544" style="zoom:35%;" />
-
-- 第二步：获取到输入语句中的路径 — `path` 形式传入
-
-<img src="/../img/assets_2019/image-20200522134904684.png" alt="image-20200522134904684" style="zoom:35%;" />
-
-- 第三步：如果输入了路径，那么就用正则匹配获取入口文件数组中想要到路径
-
-<img src="/../img/assets_2019/image-20200522134951629.png" alt="image-20200522134951629" style="zoom:35%;" />
-
-- 第四步：输出需要启动的入口路径
-
-<img src="/../img/assets_2019/image-20200522135015775.png" alt="image-20200522135015775" style="zoom:45%;" />
-
-- 第五步：启动指定的单个页面
-
-<img src="/../img/assets_2019/image-20200522135046916.png" alt="image-20200522135046916" style="zoom:38%;" />
-
-#### 引入css
-
-##### 1、新建一个 `main.css`
-
-<img src="/../img/assets_2019/image-20200615150830200.png" alt="image-20200615150830200" style="zoom: 33%;" />
-
-##### 2、先在入口文件 `main.js` 中引入 css 文件
-
-<img src="/../img/assets_2019/image-20200615150912912.png" alt="image-20200615150912912" style="zoom: 33%;" />
-
-##### 3、在 `webpack.config.js` 中配置 css 处理的 `loader`
-
-<img src="/../img/assets_2019/image-20200615151059635.png" alt="image-20200615151059635" style="zoom: 33%;" />
-
-##### 4、配置后记得安装 `loader`
-
-<img src="/../img/assets_2019/image-20200615151205948.png" alt="image-20200615151205948" style="zoom: 50%;" />
-
-##### 5、打包
-
-<img src="/../img/assets_2019/image-20200615151230064.png" alt="image-20200615151230064" style="zoom:50%;" />
-
-##### 6、打开 `index.html`
-
-<img src="/../img/assets_2019/image-20200615151256435.png" alt="image-20200615151256435" style="zoom:50%;" />
-
-#### 写plugin
 
 官方文档给出的插件模版代码：
 
@@ -175,4 +126,58 @@ class MyExampleWebpackPlugin {
     }
 }
 ```
+
+
+
+## 实现启动某一个页面
+
+在项目中，不是每次用 `devserver` 起服务，都需要启动每一个页面的，一般都是启动指定路径的页面就可以了。这里写了一个方法，简单逻辑是：先获取代码输入的文件路径，生成一个正则表达式；遍历所有文件 `entry`，只要正则匹配不到的路径全部删除
+
+-	第一步：获取到本项目的所有 `entries` 对象
+
+<img src="/../img/assets_2019/image-20200522134833544.png" alt="image-20200522134833544" style="zoom:35%;" />
+
+- 第二步：获取到输入语句中的路径 — `path` 形式传入
+
+<img src="/../img/assets_2019/image-20200522134904684.png" alt="image-20200522134904684" style="zoom:35%;" />
+
+- 第三步：如果输入了路径，那么就用正则匹配获取入口文件数组中想要到路径
+
+<img src="/../img/assets_2019/image-20200522134951629.png" alt="image-20200522134951629" style="zoom:35%;" />
+
+- 第四步：输出需要启动的入口路径
+
+<img src="/../img/assets_2019/image-20200522135015775.png" alt="image-20200522135015775" style="zoom:45%;" />
+
+- 第五步：启动指定的单个页面
+
+<img src="/../img/assets_2019/image-20200522135046916.png" alt="image-20200522135046916" style="zoom:38%;" />
+
+
+
+## 引入css
+
+##### 1、新建一个 `main.css`
+
+<img src="/../img/assets_2019/image-20200615150830200.png" alt="image-20200615150830200" style="zoom: 33%;" />
+
+##### 2、先在入口文件 `main.js` 中引入 css 文件
+
+<img src="/../img/assets_2019/image-20200615150912912.png" alt="image-20200615150912912" style="zoom: 33%;" />
+
+##### 3、在 `webpack.config.js` 中配置 css 处理的 `loader`
+
+<img src="/../img/assets_2019/image-20200615151059635.png" alt="image-20200615151059635" style="zoom: 33%;" />
+
+##### 4、配置后记得安装 `loader`
+
+<img src="/../img/assets_2019/image-20200615151205948.png" alt="image-20200615151205948" style="zoom: 50%;" />
+
+##### 5、打包
+
+<img src="/../img/assets_2019/image-20200615151230064.png" alt="image-20200615151230064" style="zoom:50%;" />
+
+##### 6、打开 `index.html`
+
+<img src="/../img/assets_2019/image-20200615151256435.png" alt="image-20200615151256435" style="zoom:50%;" />
 
