add：认识babel及其深入

--- a/_posts/工程化/2020-05-22-webpack自学经验记录.md
+++ b/_posts/工程化/2020-05-22-webpack自学经验记录.md
@@ -29,12 +29,10 @@ typora-root-url: ..
 <img src="/../img/assets_2019/TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244.png" alt="TB1GVGFNXXXXXaTapXXXXXXXXXX-4436-4244" style="zoom:30%;" />
 
 - `webpack` 可以做什么？
-
     - `webpack` 能够 **处理 js 文件的相互依赖关系**
-
     - `webpack` 能够处理 **js 的兼容问题**，把高级的、浏览器不识别的语法转为低级的、浏览器能正常识别的语法
 
-        
+推荐的优秀博客 ：[webpack系列之四loader详解1](https://juejin.cn/post/6844903780769595405)（我还没看过webpack源码，博客很好，我太菜了，觉得好难）
 
 场景：面试的时候被反复问；做项目的时候对本地、线上理解不够；
 
