modify：Http/3相关

--- a/_posts/HTTP相关/2021-04-29-23 TLS 1.3 新特性.md
+++ b/_posts/HTTP相关/2021-04-29-23 TLS 1.3 新特性.md
@@ -59,7 +59,7 @@ TLS1.3 的三个主要改进目标：**兼容、安全与性能**：
 
     因为密码套件大幅度简化 -- TLS1.3 压缩了以前的 `Hello` 协商过程，删除了 `Key Exchange` 消息，把握手时间减少到了 `1-RTT`
 
-TLS1.2 和TLS 1.3的握手对比如下：
+### TLS1.2 和TLS 1.3的握手对比
 
 <img src="/../img/assets_2019/image-20210429135128493.png" alt="image-20210429135128493" style="zoom:50%;" />
 
