--- a/_posts/浏览器原理相关内容/2021-04-18-23 如何优化页面.md
+++ b/_posts/浏览器原理相关内容/2021-04-18-23 如何优化页面.md
@@ -52,7 +52,12 @@ typora-root-url: ..
 
 什么事 `RTT`：
 
+<img src="/../img/assets_2019/watermark,F,t_70#pic_center.png" alt="在这里插入图片描述" style="zoom:63%;" />
+
 - `RTT` - 表示 **从发送端发送数据开始，到发送端收到来自接收端的确认**，总共经历的时延 -- 例如0.1M的文件，就是8个包，即8个 `RTT`
+
+    <img src="/../img/assets_2019/size_16,color_FFFFFF,t_70#pic_center.png" alt="img" style="zoom:87%;" />
+
 - TCP 协议传输一个文件时，数据并不是一次传输到服务端的，而是需要拆分成一个个数据包<span style="color:red">【一般14KB】</span>来回多次进行传输的。
 
 
