--- a/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
+++ b/_posts/HTTP相关/2021-04-29-25 HTTP2 特性.md
@@ -20,15 +20,17 @@ typora-root-url: ..
 
     2、HTTP/2 在 **语义** 上兼容 HTTP/1.1，保留了请求方法、URI 等传统概念
 
-    3、HTTP/2 使用 `HPACK` 算法（字典表） **压缩头部信息**，消除冗余数据节约带宽
+    3、HTTP/2 使用 `HPACK` 算法（字典表） **<span style="color:red">压缩头部信息</span>**，消除冗余数据节约带宽
 
-    4、HTTP/2 的消息不再是 `Header+Body` 的形式，而是分散为多个 **二进制帧**
+    4、HTTP/2 的消息不再是 `Header+Body` 的形式，而是分散为多个 **<span style="color:red">二进制帧</span>**
 
-    5、HTTP/2 使用 **<span style="color:red">虚拟的流</span>** 传输消息，解决了困扰多年的 **队头阻塞** 问题，同时实现了 **多路复用**，提高连接的利用率
+    5、HTTP/2 使用 **虚拟的流** 传输消息，解决了困扰多年的 **队头阻塞** 问题（在应用层解决，但是传输层 TCP 协议中仍旧存在队头阻塞），同时实现了 **<span style="color:red">多路复用</span>**，提高连接的利用率
 
     6、HTTP/2 也增强了安全性，要求至少是 TLS1.2，而且禁用了很多不安全的密码套件
 
     7、设置请求的优先级
+
+    8、**<span style="color:red">服务器推送</span>**
 
 ## 版本号名字
  HTTP/2 工作组明确只使用大版本号，每当发布新版本的 HTTP 协议都会有本质的不同，绝不会有零敲碎打的小改良
@@ -65,7 +67,7 @@ typora-root-url: ..
 
 因为 **流** 是虚拟的，实际上并不存在，所以 HTTP/2 就可以在一个 TCP 连接上用 **流** 同时发送 **多个碎片化的消息**，这就是常说的 **多路复用**（ Multiplexing）—— **<span style="color:red">多个往返通信都复用一个连接来处理</span>**。
 
-在 **流** 的层面上看，消息是一些有序的 **帧** 序列，而在 **连接** 的层面上看，消息却是乱序收发的 **帧**。多个请求 / 响应之间没有了顺序关系，不需要排队等待，也就不会再出现 **队头阻塞** 问题，降低了延迟，大幅度提高了连接的利用率。
+在 **流** 的层面上看，消息是一些有序的 **帧** 序列，而在 **连接** 的层面上看，消息却是乱序收发的 **帧**。多个请求 / 响应之间没有了顺序关系，不需要排队等待，也就不会再出现 请求-应答模型下的 **队头阻塞**【一个数据包影响了一堆数据包，它不来大家都走不了】问题（在应用层解决，但是传输层 TCP 协议中仍旧存在队头阻塞），降低了延迟，大幅度提高了连接的利用率。
 
 <img src="/../img/assets_2019/image-20210429140038297.png" alt="image-20210429140038297" style="zoom:45%;" />
 
